# javalamp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NEXT_STEPS.md  README.md  SCENE_GUIDE.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  scene_idea.yml
.github/workflows/: publish.yml  test.yml
scripts/: render_readme_assets.py
src/javalamp/: __init__.py  __main__.py  caffeinate.py  canvas.py  cli.py  keyboard.py  picker.py  runner.py  scene.py  theme.py
src/javalamp/scenes/: __init__.py  aquarium.py  bacchus.py  donut.py  fire.py  fireworks.py  konami.py  marquee.py  matrix.py  pipes.py  plasma.py  pollock.py  starfield.py  twombly.py
tests/: test_canvas.py
